2008-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-disassociate-draft): Revert 2008-03-18 change.

2008-06-03  Glenn Morris  <rgm@gnu.org>

	* pop3.el (nnheader-accept-process-output): Autoload it.

2008-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-decode-encoded-string): Don't decode things that
	are not 2-digit hexadecimal characters that follow `%'s.

2008-05-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-bogus-recipient-p): Fix type in doc string.
	Reported by Stephen Eglen <S.J.Eglen@damtp.cam.ac.uk>.
	(message-bogus-addresses): Rename from message-bogus-address-regexp.
	Improve custom options.
	(message-bogus-recipient-p): Adjust accordingly.

2008-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmairix.el: Require edmacro when compiling with XEmacs.

2008-05-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-initial-limit): Use unless instead of if.
	(gnus-fetch-old-headers): Warn about setting it to t for Gmane groups.

2008-05-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Add more docs.

2008-05-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnheader.el (nnheader-read-timeout): Change the default timeout from
	0.1 seconds to 0.01 seconds.  This will make nntp and pop3 article
	retrieval faster in some cases, but might make CPU usage larger.  If
	this has any bad side effects, we might revert this change.

	* pop3.el (pop3-movemail): Change the sit-for from 0.1 to 0.01, which
	seems to make mail retrieval much, much faster.
	(pop3-movemail): Use nnheader-accept-process-output instead of sleeping
	unconditionally.

	* gnus-draft.el (gnus-group-send-queue): Bind
	message-send-mail-partially-limit to nil to avoid being prompted.

2008-05-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-attach-buffer): Prompt for `disposition'.

	* message.el (message-bogus-address-regexp): Fix and improve custom
	type.